# trainctl

./: .gitignore  data.yaml  pyproject.toml  tox.ini
docs/: notes.md
src/trainctl/: __init__.py  block.py  colour.py  layout.py  led.py  strandtest.py  test.py  trainctl.py  turnout.py
test/: test_trainctl.py
